# mupen64-rr-lua

./: .clang-format  .clang-format-ignore  .editorconfig  .git-blame-ignore-revs  .gitignore  Core.vcxproj  Makefile  README.md  Views.Win32.vcxproj  mupen64.sln  mupen64.vcxproj  mupen64_2017.vcxproj
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  test.yml
bintrace_format/: bintrace_format.cpp
blight_input/: plugin.c
core/memory/: dma.cpp  flashram.cpp  flashram.h  memory.cpp  memory.h  pif.cpp  pif.h  pif2.h  savestates.cpp  savestates.h  summercart.cpp  summercart.h  tlb.cpp  tlb.h
core/r4300/: Plugin.cpp  Plugin.hpp  bc.cpp  compare_core.cpp  cop0.cpp  cop1.cpp  cop1_d.cpp  cop1_helpers.cpp  cop1_helpers.h  cop1_l.cpp  cop1_s.cpp  cop1_w.cpp  debugger.cpp  debugger.h  disasm.cpp  disasm.h  exception.cpp  exception.h  gameshark.cpp  gameshark.h  interrupt.cpp  interrupt.h  macros.h  ops.h  profile.cpp  pure_interp.cpp  r4300.cpp  r4300.h  recomp.cpp  recomp.h  recomph.h  regimm.cpp  rom.cpp  rom.h  special.cpp  timers.cpp  timers.h  tlb.cpp  tracelog.cpp  tracelog.h  (+2 more)
debugger/: breakpoints.c  breakpoints.h  debugger.c  debugger.h  decoder.c  decoder.h  desasm.c  desasm.h  regAI.c  regAI.h  regCop0.c  regCop0.h  regCop1.c  regCop1.h  regGPR.c  regGPR.h  regPI.c  regPI.h  regRI.c  regRI.h  regSI.c  regSI.h  regSpecial.c  regSpecial.h  regTLB.c  regTLB.h  regVI.c  regVI.h  registers.c  registers.h
glN64/: FrameBuffer.cpp
lang/: spanish.lng
lib/: IOHelpers.cpp  IOHelpers.h  StlExtensions.h  md5.c  microlru.h
lib/libdeflate-x64/: deflate.lib
lib/spdlog/: tweakme.h
lib/speex/: arch.h  speex_resampler.c  speex_resampler.h
lib/zlib-x64/: zlib.lib
libdeflate/: deflate.lib
lua/: LuaCallbacks.cpp  LuaCallbacks.h  LuaConsole.cpp  LuaConsole.h  LuaService.cpp  Recent.cpp  Recent.h  luaDefine.h
lua/modules/: avi.h  d2d.h  emu.h  global.h  input.h  iohelper.h  joypad.h  memory.h  movie.h  savestate.h  wgui.h
main/: Audio_#1.1.h  Controller_#1.1.h  Gfx_#1.3.h  Plugin.cpp  Plugin.hpp  Rsp_#1.1.h  adler32.c  crypt.h  debughook.c  debughook.cpp  debughook.h  disasm.c  disasm.h  guifuncs.h  ioapi.c  ioapi.h  iowin32.c  iowin32.h  main.c  main.h  main_gtk.c  md5.c  md5.h  messenger.cpp  messenger.h  mupenIniApi.c  mupenIniApi.h  mztools.c  mztools.h  ops_helper.cpp  ops_helper.h  plugin.c  plugin.h  rom.c  rom.cpp  rom.h  savestates.c  savestates.c.rej  savestates.cpp  savestates.h  (+13 more)
main/capture/: AVIComp.cpp  AVIComp.h  EncodingManager.cpp  EncodingManager.h  Resampler.cpp  Resampler.h
main/ffmpeg_capture/: ffmpeg_capture.hpp  manager_win.cpp  readscreen_win.cpp  write_thread_win.cpp  write_thread_win.hpp
main/gui_gtk/: configdialog.c  main_gtk.c
main/helpers/: io_helpers.cpp  io_helpers.h  math_helpers.h  string_helpers.h  win_helpers.h
main/lib/: argh.h  ini.h
main/speex/: arch.h  speex_resampler.c  speex_resampler.h
main/win/: Commandline.cpp  Commandline.h  Config.c  Config.cpp  Config.h  Config.hpp  CoreDbg.cpp  CrashHandler.cpp  CrashHandler.h  CrashHandlerDialog.cpp  CrashHandlerDialog.h  CrashHelper.cpp  CrashHelper.h  DebugInfo.hpp  DebugView.h  FrontendService.cpp  GUI_LogWindow.c  GUI_LogWindow.h  GameDebugger.cpp  GameDebugger.h  RomBrowser.hpp  RomSettings.c  RomSettings.h  commandline.c  commandline.cpp  commandline.h  configdialog.c  configdialog.cpp  configdialog.h  dumplist.c  dumplist.h  guifuncs.c  guifuncs.cpp  inifunctions.c  inifunctions.h  kaillera.c  kaillera.h  main_win.cpp  main_win.h  rombrowser.c  (+12 more)
memory/: dma.c  dma.cpp  dma.h  flashram.c  flashram.cpp  flashram.h  memory.c  memory.cpp  memory.h  pif.c  pif.cpp  pif.h  pif2.h  savestates.cpp  savestates.h  summercart.c  summercart.cpp  summercart.h  tlb.c  tlb.cpp  tlb.h
mupen64_input/: main.c
patches/: 0001-updated-to-most-recent-dev-branch.patch
r4300/: Plugin.cpp  Plugin.hpp  bc.c  compare_core.c  compare_core.cpp  cop0.c  cop0.cpp  cop1.c  cop1_d.c  cop1_d.cpp  cop1_helpers.c  cop1_helpers.cpp  cop1_helpers.h  cop1_l.c  cop1_l.cpp  cop1_s.c  cop1_s.cpp  cop1_w.c  cop1_w.cpp  exception.c  exception.h  gameshark.cpp  gameshark.h  interrupt.c  interrupt.cpp  interrupt.h  interupt.c  interupt.h  macros.h  ops.h  profile.c  pure_interp.c  pure_interp.cpp  r4300.c  r4300.cpp  r4300.h  recomp.c  recomp.cpp  recomp.h  recomph.h  (+14 more)
r4300/x86/: assemble.c  assemble.cpp  assemble.h  debug.c  debug.cpp  gbc.c  gbc.cpp  gcop0.c  gcop0.cpp  gcop1.c  gcop1_d.c  gcop1_d.cpp  gcop1_helpers.c  gcop1_helpers.cpp  gcop1_helpers.h  gcop1_l.c  gcop1_s.c  gcop1_s.cpp  gcop1_w.c  gr4300.c  gr4300.cpp  gregimm.c  gregimm.cpp  gspecial.c  gspecial.cpp  gtlb.c  gtlb.cpp  regcache.c  regcache.h  rjump.c  rjump.cpp
shared/: AsyncExecutor.cpp  AsyncExecutor.h  Config.cpp  Config.hpp  LuaCallbacks.cpp  LuaCallbacks.h  Messenger.cpp  Messenger.h  guifuncs.cpp  guifuncs.h  messenger.cpp  messenger.h
shared/helpers/: IOHelpers.cpp  IOHelpers.h  StlExtensions.h  StringHelpers.h  collection_helpers.h  io_helpers.cpp  io_helpers.h  math_helpers.h  string_helpers.h  win_helpers.h
shared/services/: FrontendService.h  IOService.h  LoggingService.h  LuaService.h  MGECompositor.h  PlatformService.h
shared/types/: CoreTypes.h
src/: stdafx.h
src/Core/: Core.cpp  (+2 more)
src/Core-dummy/: Core.cpp  Core.h  cheats.cpp
tools/: check_encode_validity.py  generate_changelog.py  mupenapi.lua
view/: PlatformService.cpp  resource.h  rsrc.rc
winproject/: app.manifest  debugview.ini  mupen64.cache  mupen64.cfg  mupen64.exe.Manifest  mupen64.sln  mupen64.vcxproj  resource.h  resource.h.rej  rsrc.aps  rsrc.rc  rsrc.rc.rej
winproject/mupen64/: .clang-format  CMakeLists.txt  CrashHandler.h  SUPER MARIO 64 (USA) - Copy (2).st  SUPER MARIO 64 (USA) - Copy.st  SUPER MARIO 64 (USA).m64  SUPER MARIO 64 (USA).st  TW DREAM EDITION (USA).m64  how.st  mupen64.sln  mupen64.vcxproj  mupen64_2010.vcxproj  mupen64_2017.sln  mupen64_2017.vcxproj  mupen64_2017.vcxproj.filters  presets.json  yes.m64  yes.st  yyye.m64
winproject/mupen64/CMake/: Default.cmake
xxhash/: xxhash.lib
(+416 files in other folders)
